--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,6 +56,7 @@ const socialLinks = [
         class="w-3/5 md:w-full mt-auto md:m-auto opacity-80"
         loading="lazy"
         priority
+        transition:name='icon'
       />
       <Image
         src={FigureImage}
@@ -63,6 +64,7 @@ const socialLinks = [
         class="w-3/5 md:w-full mt-auto md:m-auto opacity-80"
         loading="lazy"
         priority
+        transition:name='figure'
       />
     </div>
 
