--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,13 @@
 ---
 import '../styles/global.css';
 import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro'; // Import Footer
-import { ViewTransitions } from 'astro:transitions'; // Import ViewTransitions
+import Footer from '../components/Footer.astro';
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
 	title?: string;
 	description?: string;
-	isFullScreen?: boolean; // Add prop to control full screen behavior
+	isFullScreen?: boolean;
 }
 
 const {
@@ -25,19 +25,16 @@ const {
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<ViewTransitions /> {/* Add ViewTransitions component */}
+		<ViewTransitions />
 	</head>
 	<!-- Use custom base colors -->
 	<body class="flex flex-col min-h-screen bg-base-100 text-base-content">
-		{/* Conditionally render Header only if not isFullScreen */}
 		{ !isFullScreen && <Header /> }
-		<!-- Apply classes conditionally based on isFullScreen using template literal -->
 		<main
 			class={`flex-grow w-full ${!isFullScreen ? 'container mx-auto p-4' : ''} ${isFullScreen ? 'p-0 max-w-none' : ''}`}
 		>
 			<slot />
 		</main>
-		{/* Conditionally render Footer only if not isFullScreen */}
 		{ !isFullScreen && <Footer /> }
 	</body>
 </html>
