--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -24,7 +24,7 @@ const structuredDataImageUrl = imageUrl ? new URL(imageUrl, Astro.site).toString
 
 ---
 {/* Pass description, ogImageUrl, and ogType to Layout */}
-<Layout {title} {description} ogImageUrl={imageUrl} ogType="article">
+<Layout title={title + ' | watabeggの個人サイト'} {description} ogImageUrl={imageUrl} ogType="article">
   {/* JSON-LD Structured Data for Article/BlogPosting */}
   <script type="application/ld+json" set:html={JSON.stringify({
     "@context": "https://schema.org",
