--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -84,7 +84,17 @@ const programSkills = [
         <h2 class="text-2xl md:text-3xl font-semibold mb-3">趣味</h2>
         <div class="flex flex-col gap-y-8 justify-center items-center">
           <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/jp/playlist/%E8%B6%A3%E5%91%B3-2025-05/pl.u-V9D7gpauBKRRAVm"></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/n96cgEBWhl8?si=XECNRS89Vz2ehK28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="aspect-video w-full max-w-[700px] rounded-lg overflow-hidden">
+            <iframe 
+              class="w-full h-full" 
+              src="https://www.youtube.com/embed/n96cgEBWhl8?si=XECNRS89Vz2ehK28" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              referrerpolicy="strict-origin-when-cross-origin" 
+              allowfullscreen
+            ></iframe>
+            </div>
         </div>
       </section>
     </div>
