Googleタグマネージャーとgtag.jsを追加し、SEOメタタグを更新

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,20 @@ const finalOgImageUrl = ogImageUrl ? new URL(ogImageUrl, Astro.site).toString() 
 		<link rel="icon" type="image/webp" href="/favicon.webp" /> {/* Corrected type */}
 		<meta name="generator" content={Astro.generator} />
 
+		<!-- Google tag (gtag.js) -->
+		<script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-2D4GRWSW25"></script>
+		<script is:inline>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-2D4GRWSW25');
+		</script>
+
+		<!-- Google Tag Manager -->
+	<script is:inline>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-PGTBZF6M');</script>
+	<!-- End Google Tag Manager -->
+
 		<meta name="google-site-verification" content="rpZl-aR3PveVL3tfGb_qZL_1aiCJfKEUm-AoabDAnwo" />
 
 		{/* SEO Meta Tags */}
@@ -75,16 +89,6 @@ const finalOgImageUrl = ogImageUrl ? new URL(ogImageUrl, Astro.site).toString() 
         "query-input": "required name=search_term_string"
       }
     })} />
-
-		<!-- Google tag (gtag.js) -->
-		<script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-2D4GRWSW25"></script>
-		<script is:inline>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-
-			gtag('config', 'G-2D4GRWSW25');
-		</script>
 		<ViewTransitions />
 	</head>
 	<!-- Use custom base colors -->
